syntax = "proto3";

package v1;

import "v1/enums.proto";

option go_package = "tragedylooper/internal/game/proto/v1;v1";

// 条件的通用消息，使用 oneof 包含各种具体条件
message Condition {
  oneof condition_type {// 条件类型，只会有其中一个
    StatCondition stat_condition = 1; // 属性条件（例如，妄想值达到某阈值）
    LocationCondition location_condition = 2; // 地点条件（例如，角色在特定地点）
    // 可以扩展其他条件，例如 RoleCondition（角色身份条件）, TraitCondition（角色特征条件）
  }
}

// 属性条件
message StatCondition {
  int32 character_id = 1; // 目标角色ID
  enum StatType {// 属性类型
    STAT_TYPE_UNSPECIFIED = 0; // 未指定
    PARANOIA_STAT = 1; // 妄想值
    GOODWILL_STAT = 2; // 好感值
    INTRIGUE_STAT = 3; // 阴谋值
  }
  StatType stat_type = 2; // 要检查的属性类型
  enum Comparator {// 比较符
    COMPARATOR_UNSPECIFIED = 0; // 未指定
    GREATER_THAN = 1; // 大于
    LESS_THAN = 2; // 小于
    EQUAL_TO = 3; // 等于
    GREATER_THAN_OR_EQUAL = 4; // 大于等于
    LESS_THAN_OR_EQUAL = 5; // 小于等于
  }
  Comparator comparator = 3; // 比较符
  int32 value = 4; // 比较的值
}

// 地点条件
message LocationCondition {
  int32 character_id = 1; // 目标角色ID
  LocationType location = 2; // 目标地点
  bool is_alone = 3; // 是否在该地点独处
  bool not_alone = 4; // 是否在该地点不独处
}
